--- a/templates/dummy.html
+++ b/templates/dummy.html
@@ -17,7 +17,13 @@
           <a class='nav-link' href="{% url 'registration' %}">registration</a>
           <a class='nav-link' href="{% url 'home' %}">home</a>
           <a class='nav-link' href="{% url 'user_login' %}">user_login</a>
-          
+          {% if user.is_authenticated %}
+        <a class='nav-link' href="{% url 'user_logout' %}">LogOut</a>
+        <a class='nav-link' href="{% url 'profile' %}">Profile</a>
+
+        {% else %}
+        <a class='nav-link' href="{% url 'user_login' %}">LogIn page</a>
+        {% endif %}
         </nav>
 
         {% block body_block %}
