--- a/templates/home.html
+++ b/templates/home.html
@@ -9,7 +9,7 @@
     {% if username %}
         <h1>Welcome to Home page MR/Ms {{username}}</h1>
     {% else %}
-        <h1>Welocme to home page</h1>
+        <h1 style="background-color:cyan; " contextmenu="center">Welocme to home page</h1>
     {% endif %}
     
 </center>
