--- a/templates/dummy.html
+++ b/templates/dummy.html
@@ -9,22 +9,31 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
 
     <title>Hello, world!</title>
+    <style>
+      .nav
+      {    
+        background:linear-gradient(45 deg,red,green,cyan,blue) ;
+      
+
+       }
+       
+    </style>
   </head>
-  <body>
+  <body >
       <nav class="nav">
-          <a class='nav-link' href="{% url 'admin:index' %}">Admin</a>
+          <a class='nav-link' href="{% url 'admin:index' %}" >Admin</a>
             
           <a class='nav-link' href="{% url 'registration' %}">registration</a>
           <a class='nav-link' href="{% url 'home' %}">home</a>
           <a class='nav-link' href="{% url 'user_login' %}">user_login</a>
           {% if user.is_authenticated %}
-        <a class='nav-link' href="{% url 'user_logout' %}">LogOut</a>
-        <a class='nav-link' href="{% url 'profile' %}">Profile</a>
+          <a class='nav-link' href="{% url 'user_logout' %}" >LogOut</a>
+          <a class='nav-link' href="{% url 'profile' %}">Profile</a>
 
         {% else %}
-        <a class='nav-link' href="{% url 'user_login' %}">LogIn page</a>
+        <a id='nav-link' href="{% url 'user_login' %}">LogIn page</a>
         {% endif %}
-        </nav>
+      </nav>
 
         {% block body_block %}
 
